# iss-lidar

./: .gitignore  LICENSE  Lidar_functions.py  README.md  consensus_set.py  halo_dl_decode.py  ppi.py  ppi_scans_to_vad.py  pyproject.toml  test_vad.py  tools.py  vad.py  vad_to_30min_winds.py  vad_to_consensus.py
src/iss_lidar/: Lidar_functions.py  __init__.py  consensus_set.py  ppi.py  ppi_scans_to_vad.py  tools.py  vad.py  vad_to_consensus.py
testdata/: VAD_20220501.nc  cfrad.20210630_152022_WLS200s-181_133_PPI_50m.nc  cfrad.20210630_171644_WLS200s-181_133_PPI_50m.nc  cfrad.20210630_174238_WLS200s-181_133_PPI_50m.nc  test_vadset.nc
testdata/vad/: A_2.p  a.json  b.json  b_0.p  b_1.p  b_2.p  b_3.p  correlation.p  derived_products.json  du.p  dv.p  dw.p  foo2.p  locations.json  non_nan_idxs.json  residual.p  speed.p  u.p  v.p  w.p  wdir.p  wind_errors.json  winds.json  x.p  y.p  z.p
tests/: test_consensus_set.py  test_lidar_functions.py  test_ppi.py  test_tools.py  test_vad.py  test_vad_to_30min_winds.py  test_vad_to_consensus.py
