[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iss-lidar"
version = "1.2.0"
authors = [
  { name="Isabel Suhr", email="isabels@ucar.edu" },
]
description = "Wind lidar processing library for the NSF NCAR Integrated Sounding System"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "netCDF4",
    "numpy",
    "pytz",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/NCAR/iss-lidar"
Issues = "https://github.com/NCAR/iss-lidar/issues"